--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 		</header>
 		
 		<p>From 2014-2015, I maintained an online archive of all the work that I made. I had published everything that I had made, even the stuff that wasn't that great, and licensed most of it under a Creative Commons Attribution license (and some CC0).<br></p>
-<p>I have decided to close this site as I could not have foreseen the extent to which it would become indexed by search engines, and I would rather have greater control as to how this material was distributed.<br><br></p>
-<p>Sincerely,<br></p>
+<p>I have decided to close this site as I had not have foreseen the extent to which it would become indexed by search engines. For the respect of those that appear in many of my photographs and their privacy, I have scrubbed all of the content from this site.<br><br></p>
+<p>Sincerely,</p>
 <p>Tom Hackshaw</p>
 
 <section class="footer">
